# jejak-udara

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
analytics/: geo.py  jobs.py  layer_a_wind.py  layer_b_hotspot.py  layer_c_sources.py  layer_d_context.py
api/: demo_seed.py  main.py
db/: SCHEMA.md  schema.sql
db/fixtures/: jakarta_zone_centroids.csv
docs/: API.md  API_CONTRACT.md
infra/: Dockerfile.ingest  docker-compose.demo.yml  docker-compose.yml
ingest/: bmkg.py  cams.py  common.py  firms.py  openmeteo.py  satellite.py  scheduler.py  spku.py  static_gis.py  status.py
scripts/: build_fixtures.py  build_heatmap.py  build_scenarios.py  demo_common.py
tests/: test_bmkg_parser.py  test_hotspot.py  test_plume.py  test_polar.py  test_spku_parser.py
twin/: ASSUMPTIONS.md  backtest.py  plume.py  scenarios.py
web/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/public/fixtures/: heatmap.json  meta.json  scenarios.json  stations.json
web/src/: App.tsx  api.ts  app.css  fixtures.ts  index.css  main.tsx  mapUtils.ts  vite-env.d.ts
web/src/components/: chrome.tsx  primitives.tsx  sources.tsx
web/src/tokens/: colors.css  spacing.css  typography.css
web/src/views/: KelayakanView.tsx  PetaView.tsx  SumberView.tsx  TwinView.tsx
